--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec 'node -r dotenv-safe/config' --inspect=0.0.0.0 src/index.js",
+    "start:prod": "node src/index.js",
     "lint": "eslint",
     "lint:fix": "npm run lint -- --fix",
     "test": "jest",
