--- a/.drone.yml
+++ b/.drone.yml
@@ -4,6 +4,9 @@ name: default
 steps:
   - name: tests
     image: node:12.14.0-alpine3.11
+    environment:
+      POSTGRESQL_HOST: database
+      POSTGRESQL_DB: snipsnap-test
     commands:
       - npm install
       - npm run lint
