--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:prod": "node src/index.js",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
     "db:create": "sequelize-cli db:create",
     "db:drop": "sequelize-cli db:drop",
     "db:migrate": "sequelize-cli db:migrate",
