--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,7 @@ steps:
     environment:
       POSTGRESQL_HOST: database
       POSTGRESQL_DB: snipsnap-test
+      NODE_ENV: test
     commands:
       - npm install
       - npm run lint
