--- a/.drone.yml
+++ b/.drone.yml
@@ -2,19 +2,32 @@ kind: pipeline
 name: default
 
 steps:
-  - name: tests
-    image: node:12.14.0-alpine3.11
-    environment:
-      POSTGRESQL_HOST: database
-      POSTGRESQL_DB: snipsnap-test
-      POSTGRESQL_USERNAME: postgres
-      NODE_ENV: test
-    commands:
-      - npm install
-      - npm run lint
-      - npm run db:create
-      - npm run db:migrate
-      - npm run test
+  # - name: tests
+  #   image: node:12.14.0-alpine3.11
+  #   environment:
+  #     POSTGRESQL_HOST: database
+  #     POSTGRESQL_DB: snipsnap-test
+  #     POSTGRESQL_USERNAME: postgres
+  #     NODE_ENV: test
+  #   commands:
+  #     - npm install
+  #     - npm run lint
+  #     - npm run db:create
+  #     - npm run db:migrate
+  #     - npm run test
+
+  - name: build
+    image: plugins/docker
+    settings:
+      repo: registry.pixelpoint.io/snipsnap-api
+      registry: registry.pixelpoint.io
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
+    # when:
+    #   branch: master
+    #   event: push
 
 services:
   - name: database
