--- a/.drone.yml
+++ b/.drone.yml
@@ -5,9 +5,9 @@ steps:
   - name: initial_notification
     image: plugins/slack
     settings:
-      webhook: https://hooks.slack.com/services/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
+      webhook: https://hooks.slack.com/services/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
       template: >
-        Repository: *{{repo.name}}*. Status: *Running*. Author: *{{build.author}}*. Build: *#{{build.number}}*. Branch: *{{build.branch}}*. Event: *{{build.event}}*. Logs: {{build.link}}
+        Repository: 555
 
   - name: tests
     image: node:12.14.0-alpine3.11
@@ -55,12 +55,12 @@ steps:
   - name: build_status_notification
     image: plugins/slack
     settings:
-      webhook: https://hooks.slack.com/services/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
+      webhook: https://hooks.slack.com/services/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
       template: >
         {{#success build.status}}
-        Repository: *{{repo.name}}*. Status: *Completed*. Author: *{{build.author}}*. Build: *#{{build.number}}*. Branch: *{{build.branch}}*. Event: *{{build.event}}*. Logs: {{build.link}}
+        666
         {{else}}
-        Repository: *{{repo.name}}*. Status: *Failed*. Author: *{{build.author}}*. Build: *#{{build.number}}*. Branch: *{{build.branch}}*. Event: *{{build.event}}*. Logs: {{build.link}}
+        777
         {{/success}}
     when:
       status: [success, failure]
