--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "NODE_ENV=test jest",
     "db:create": "sequelize-cli db:create",
     "db:drop": "sequelize-cli db:drop",
+    "db:migration:create": "sequelize-cli migration:generate",
     "db:migrate": "sequelize-cli db:migrate",
     "db:migrate:undo": "sequelize-cli db:migrate:undo",
     "db:seed:generate": "sequelize-cli seed:generate",
