--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec 'node -r dotenv-safe/config' --inspect=0.0.0.0 src/index.js",
+    "start": "npx nodemon --exec 'node -r dotenv/config' --inspect=0.0.0.0 src/index.js",
     "start:prod": "node src/index.js",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
@@ -22,13 +22,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv-safe": "^8.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-pino-logger": "^4.0.0",
     "express-validator": "^6.3.0",
     "pg": "^7.15.1",
     "pg-hstore": "^2.3.3",
     "pino": "^5.14.0",
+    "pino-pretty": "^3.5.0",
     "sequelize": "^5.21.3"
   },
   "devDependencies": {
@@ -41,7 +42,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "jest": "^24.9.0",
     "nodemon": "^2.0.2",
-    "pino-pretty": "^3.5.0",
     "sequelize-cli": "^5.5.1",
     "supertest": "^4.0.2"
   }
