--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jest": "^24.9.0",
     "nodemon": "^2.0.2",
     "sequelize-cli": "^5.5.1",
+    "sequelize-mock": "^0.10.2",
     "supertest": "^4.0.2"
   }
 }
